to see first five row of x

--- a/SHEET_1_PRATIK_H_DHAMELIYA.ipynb
+++ b/SHEET_1_PRATIK_H_DHAMELIYA.ipynb
@@ -30,6 +30,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {
+        "id": "o9UV0HrRtjDv"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import numpy.linalg as nplin\n",
@@ -41,12 +46,7 @@
         "    identity = np.identity(len(x))\n",
         "    h = identity - (2 * np.outer(dif, dif)) / np.inner(dif,dif)\n",
         "    return h\n"
-      ],
-      "metadata": {
-        "id": "o9UV0HrRtjDv"
-      },
-      "execution_count": 67,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -65,8 +65,8 @@
       "cell_type": "code",
       "execution_count": 68,
       "metadata": {
-        "tags": [],
-        "id": "AaWE4406sJyJ"
+        "id": "AaWE4406sJyJ",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -77,43 +77,42 @@
       "cell_type": "code",
       "execution_count": 69,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYjBqg_hsJyJ",
-        "outputId": "2203cc5e-c003-4473-a252-ffde3f4337d8"
+        "outputId": "2203cc5e-c003-4473-a252-ffde3f4337d8",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([0.88639048, 0.81523137, 0.45429612, 0.73714542, 0.33846829])"
             ]
           },
+          "execution_count": 69,
           "metadata": {},
-          "execution_count": 69
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "x"
+        "x #to see first five row of x"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 70,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OCbhp7X2sJyK",
-        "outputId": "04e2a412-8672-4cb7-f12b-8a11af89a05a"
+        "outputId": "04e2a412-8672-4cb7-f12b-8a11af89a05a",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 0.58261987,  0.53584735,  0.29860648,  0.48452186,  0.22247345],\n",
@@ -123,8 +122,9 @@
               "       [ 0.22247345, -0.28561927, -0.1591643 , -0.25826158,  0.88141641]])"
             ]
           },
+          "execution_count": 70,
           "metadata": {},
-          "execution_count": 70
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -135,23 +135,23 @@
       "cell_type": "code",
       "execution_count": 71,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JDC7mrNRsJyK",
-        "outputId": "a74a8f4c-07a8-402c-c9df-feb4e37406a5"
+        "outputId": "a74a8f4c-07a8-402c-c9df-feb4e37406a5",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([ 1.52139, -0.     ,  0.     ,  0.     ,  0.     ])"
             ]
           },
+          "execution_count": 71,
           "metadata": {},
-          "execution_count": 71
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -183,8 +183,8 @@
       "cell_type": "code",
       "execution_count": 72,
       "metadata": {
-        "tags": [],
-        "id": "BSoO_94gsJyL"
+        "id": "BSoO_94gsJyL",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -199,16 +199,15 @@
       "cell_type": "code",
       "execution_count": 73,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wzs1oehqsJyL",
-        "outputId": "25b012cb-602b-4ed3-e289-f4a77a65f062"
+        "outputId": "25b012cb-602b-4ed3-e289-f4a77a65f062",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 0.6,  0. ,  0.8],\n",
@@ -216,8 +215,9 @@
               "       [ 0.8,  0. , -0.6]])"
             ]
           },
+          "execution_count": 73,
           "metadata": {},
-          "execution_count": 73
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -228,23 +228,23 @@
       "cell_type": "code",
       "execution_count": 74,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q4fpFJKesJyL",
-        "outputId": "9203b647-e698-40d8-cc14-75a1bf37b619"
+        "outputId": "9203b647-e698-40d8-cc14-75a1bf37b619",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([5., 0., 0.])"
             ]
           },
+          "execution_count": 74,
           "metadata": {},
-          "execution_count": 74
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -264,16 +264,15 @@
       "cell_type": "code",
       "execution_count": 75,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0w9pDYrwsJyM",
-        "outputId": "008d46e1-686f-419f-b7d4-c6c2acf84c69"
+        "outputId": "008d46e1-686f-419f-b7d4-c6c2acf84c69",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "matrix([[ 5.00000000e+00,  6.80000000e+00,  6.20000000e+00],\n",
@@ -281,8 +280,9 @@
               "        [ 0.00000000e+00,  1.84948064e-15, -8.62374731e+00]])"
             ]
           },
+          "execution_count": 75,
           "metadata": {},
-          "execution_count": 75
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -310,6 +310,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 90,
+      "metadata": {
+        "id": "rCbS2wgp6Ksm"
+      },
+      "outputs": [],
       "source": [
         "def householder_qr(A):\n",
         "    m, n = np.shape(A)\n",
@@ -329,12 +334,7 @@
         "\n",
         "    return matrices_H\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "rCbS2wgp6Ksm"
-      },
-      "execution_count": 90,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -353,17 +353,17 @@
       "cell_type": "code",
       "execution_count": 91,
       "metadata": {
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DL0swiuMsJyN",
-        "outputId": "ed49e420-658e-4ef6-f009-64d6d891f3d1"
+        "outputId": "ed49e420-658e-4ef6-f009-64d6d891f3d1",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "H_1:\n",
             "[[-0.2        -0.4        -0.8        -0.4       ]\n",
@@ -440,7 +440,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[1., 3., 8., 6., 2.],\n",
@@ -449,8 +448,9 @@
               "       [2., 4., 6., 1., 7.]])"
             ]
           },
+          "execution_count": 95,
           "metadata": {},
-          "execution_count": 95
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -503,7 +503,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(array([[-0.2       , -0.4       , -0.8       , -0.4       ],\n",
@@ -520,8 +519,9 @@
               "           4.60205102]]))"
             ]
           },
+          "execution_count": 97,
           "metadata": {},
-          "execution_count": 97
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -560,7 +560,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(array([[-0.2       , -0.60448772,  0.74413167, -0.20214514],\n",
@@ -577,8 +576,9 @@
               "           5.08731926]]))"
             ]
           },
+          "execution_count": 99,
           "metadata": {},
-          "execution_count": 99
+          "output_type": "execute_result"
         }
       ],
       "source": [
