--- a/SHEET_1_PRATIK_H_DHAMELIYA.ipynb
+++ b/SHEET_1_PRATIK_H_DHAMELIYA.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 1,
       "metadata": {
         "id": "o9UV0HrRtjDv"
       },
@@ -39,6 +39,9 @@
         "import numpy as np\n",
         "import numpy.linalg as nplin\n",
         "\n",
+        "#An orthogonal matrix will not amplify the error term over iterations, as ∣∣QX∣∣=∣∣X∣∣.\n",
+        "#Multiplying this orthogonal matrix with vector 𝑋 will make all entries zero except the first one.\n",
+        "#Function will give you an orthogonal matrix for vector 𝑋.\n",
         "def h(x):\n",
         "    e1 = np.eye(len(x))[0]\n",
         "    pro_x = nplin.norm(x) * e1\n",
@@ -63,19 +66,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "metadata": {
         "id": "AaWE4406sJyJ",
         "tags": []
       },
       "outputs": [],
       "source": [
+        "#Generate five random numbers with a uniform distribution.\n",
         "x = np.random.rand(5)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,10 +92,10 @@
         {
           "data": {
             "text/plain": [
-              "array([0.88639048, 0.81523137, 0.45429612, 0.73714542, 0.33846829])"
+              "array([0.1902858 , 0.66031927, 0.03821414, 0.23641406, 0.90412092])"
             ]
           },
-          "execution_count": 69,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -102,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,14 +119,14 @@
         {
           "data": {
             "text/plain": [
-              "array([[ 0.58261987,  0.53584735,  0.29860648,  0.48452186,  0.22247345],\n",
-              "       [ 0.53584735,  0.31206025, -0.38336155, -0.62204628, -0.28561927],\n",
-              "       [ 0.29860648, -0.38336155,  0.78636781, -0.34664173, -0.1591643 ],\n",
-              "       [ 0.48452186, -0.62204628, -0.34664173,  0.43753567, -0.25826158],\n",
-              "       [ 0.22247345, -0.28561927, -0.1591643 , -0.25826158,  0.88141641]])"
+              "array([[ 0.16395319,  0.56894131,  0.03292589,  0.20369801,  0.77900458],\n",
+              "       [ 0.56894131,  0.61282764, -0.02240652, -0.13861929, -0.53012329],\n",
+              "       [ 0.03292589, -0.02240652,  0.99870329, -0.0080222 , -0.03067941],\n",
+              "       [ 0.20369801, -0.13861929, -0.0080222 ,  0.95037015, -0.1898    ],\n",
+              "       [ 0.77900458, -0.53012329, -0.03067941, -0.1898    ,  0.27414573]])"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -133,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,10 +150,10 @@
         {
           "data": {
             "text/plain": [
-              "array([ 1.52139, -0.     ,  0.     ,  0.     ,  0.     ])"
+              "array([ 1.16061, -0.     , -0.     , -0.     , -0.     ])"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -181,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 21,
       "metadata": {
         "id": "BSoO_94gsJyL",
         "tags": []
@@ -197,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,7 +219,7 @@
               "       [ 0.8,  0. , -0.6]])"
             ]
           },
-          "execution_count": 73,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -226,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -242,7 +246,7 @@
               "array([5., 0., 0.])"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -262,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -277,10 +281,10 @@
             "text/plain": [
               "matrix([[ 5.00000000e+00,  6.80000000e+00,  6.20000000e+00],\n",
               "        [ 0.00000000e+00,  5.63560112e+00,  2.27837275e+00],\n",
-              "        [ 0.00000000e+00,  1.84948064e-15, -8.62374731e+00]])"
+              "        [ 0.00000000e+00,  1.27216467e-15, -8.62374731e+00]])"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -310,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 10,
       "metadata": {
         "id": "rCbS2wgp6Ksm"
       },
@@ -351,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 12,
       "metadata": {
         "id": "g2tzUgXHsJyN"
       },
@@ -408,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 13,
       "metadata": {
         "id": "VX_KkWC2sJyN"
       },
@@ -419,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 14,
       "metadata": {
         "id": "LNG6k1jcsJyN"
       },
@@ -430,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,7 +452,7 @@
               "       [2., 4., 6., 1., 7.]])"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -478,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 16,
       "metadata": {
         "id": "10EqOhyZsJyN"
       },
@@ -493,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +523,7 @@
               "           4.60205102]]))"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -539,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 18,
       "metadata": {
         "id": "tO_vVL67sJyO"
       },
@@ -550,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -576,7 +580,7 @@
               "           5.08731926]]))"
             ]
           },
-          "execution_count": 99,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -675,7 +679,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.3"
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
